--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,83 @@
-.App {
-  text-align: center;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*{
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+html, body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #282c34;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app{
+    text-align: center;
+}
+h1{
+    color: #fff;
+    margin-bottom: 0.5rem;
+    font-size: 1.75rem;
+}
+.todo-wrapper{
+    background: #1A1A40;
+    margin-top: 5rem;
+    padding: 2rem;
+    border-radius: 5px;
+}
+.todo-form{
+  width: 100%;
+  margin-bottom: 1rem;
+}
+.todo-input{
+  outline: none;
+  background: none;
+  border: 1px solid #282c34;
+  padding: 0.5rem 1rem;
+  margin-bottom: 2rem;
+  width: 300px;
+  color: #fff;
+}
+.todo input::placeholder{
+  color: #ffffff4d;
+}
+.todo-btn{
+  background: #8758ff;
+  color: #fff;
+  padding: 0.55rem;
+  cursor: pointer;
+  border: none;
+}
+.todo{
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding: 0.75rem 1rem;
+  border-bottom: 1rem;
+  border-radius: 5px;
+  color: #fff;
+  background: #282c34;
+  margin: 0.75rem;
+  
+  word-break: break-all;
 }
-
-.App-link {
-  color: #61dafb;
+.fa-trash{
+  margin-left: 0.75rem;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.incomplete{
+  color: #fff;
+  cursor: pointer;
+}
+.completed{
+  color: #c5aeff;
+  text-decoration: line-through;
+  cursor: pointer;
+}
+.edit-icon, .delete-icon, .check-icon{
+  cursor: pointer;
+}
+:is(.edit-icon, .delete-icon, .check-icon):hover{
+  color: #c5aeff;
+  transition: .4s;
 }
